--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/i18next": "^12.1.0",
     "@types/jest": "24.0.16",
     "@types/node": "12.6.8",
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
+    "i18next": "^17.0.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-i18next": "^10.11.4",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3"
   },
