--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/react": "16.8.24",
     "@types/react-dom": "16.8.5",
     "i18next": "^17.0.7",
+    "i18next-browser-languagedetector": "^3.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-i18next": "^10.11.4",
